<resources>
    <string name="app_name">7MinutesWorkout</string>
    <string name="image">image</string>
    <string name="start">Start</string>
    <string name="getReady">Get Ready For</string>
    <string name="upcoming">Upcoming Exercise</string>
    <string name="upC">name</string>
    <string name="end">End</string>
    <string name="congratMess">Congratulation! \nYou have Finished the workout</string>
    <string name="finish">Finish</string>
    <string name="congratulation_message">Congratulation message</string>
    <string name="finish_button_desc">Finish Button</string>
    <string name="end_workout_screen_desc">End workout screen</string>
    <string name="congratulation_image_desc">congratulation image</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_will_stop">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="calculate">Calculate</string>
    <string name="metric_units">Metric Units</string>
    <string name="us_units">US units</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="normal">Normal</string>
    <string name="inch">Inch</string>
    <string name="feet">Feet</string>
    <string name="history">History</string>
    <string name="calBmi">CALCULATE BMI</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
</resources>