<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Finish"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tvEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end"
        android:textStyle="bold"
        android:textSize="@dimen/ds25"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp20"
        android:textAllCaps="true"
        android:contentDescription="@string/end_workout_screen_desc"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="@dimen/dp20"
        android:gravity="center"
        android:layout_gravity="center"
        android:src="@drawable/well_done"
        android:scaleType="fitXY"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        android:contentDescription="@string/congratulation_image_desc"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        android:text="@string/congratMess"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:contentDescription="@string/congratulation_message"
        />
    <Button
        android:id="@+id/finishBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        android:text="@string/finish"
        android:contentDescription="@string/finish_button_desc"
        />

</LinearLayout>