<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMI">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_bmi"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        />

    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tb_bmi"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/drawable_radio_group_tab_back"
        >

        <RadioButton
            android:id="@+id/rbMetricUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:checked="true"
            android:gravity="center"
            android:layout_weight="1"
            android:button="@null"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/metric_units"
            android:textAllCaps="true"
            android:background="@drawable/drawable_units_tab_selector"
            android:textColor="@drawable/drawable_unit_text_color_selector"
             />
        <RadioButton
            android:id="@+id/rbUSUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:checked="false"
            android:gravity="center"
            android:layout_weight="1"
            android:button="@null"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/us_units"
            android:textAllCaps="true"
            android:background="@drawable/drawable_units_tab_selector"
            android:textColor="@drawable/drawable_unit_text_color_selector"
            />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rgUnits"
        android:padding="@dimen/dp10"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMetricUnitWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/eMetricUnitWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_in_kg"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUSUnitWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:visibility="gone"
            tools:visibility="gone"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/eUSUnitWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_in_kg"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/llUSUnitHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="gone"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUSUnitHeightFeet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/dp10"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/eUSUnitHeightFeet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/feet"
                    android:inputType="number"
                    android:textSize="16sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUSUnitHeightInch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/dp10"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/eUSUnitheightInch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inch"
                    android:inputType="number"
                    android:textSize="16sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMetricUnitheight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/eMetricUnitheight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height_in_cm"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:id="@+id/llDisplayResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            tools:visibility="visible"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/tvYourBmi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/your_bmi"
                android:textAllCaps="true"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/tvBmiValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:text="15.00"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/tvBmiType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/normal"
                />
            <TextView
                android:id="@+id/tvBmiDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/normal"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btnCal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginTop="35dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_gravity="bottom"
            android:text="@string/calculate"
            android:textAllCaps="true"
            />

    </LinearLayout>

</RelativeLayout>