<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="@dimen/dp10"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp220"
        android:contentDescription="@string/image"
        android:src="@drawable/img_main_page"
        />

    <LinearLayout
        android:id="@+id/llStart"
        android:layout_width="@dimen/dp150"
        android:layout_height="@dimen/dp150"
        android:layout_marginTop="@dimen/dp20"
        android:gravity="center"
        android:background="@drawable/item_color_accent_boarder_ripple_background"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="@dimen/ds22"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginEnd="40dp"
            >

            <LinearLayout
                android:id="@+id/llBMI"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/item_circular_color_accent_background"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="BMI"
                    android:textColor="@color/white"
                    android:textSize="@dimen/ds22"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5"
                android:textSize="@dimen/ds22"
                android:textStyle="bold"
                android:text="Calculator"
                android:textColor="@color/colorAccent"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="40dp"
            >

            <LinearLayout
                android:id="@+id/llHistory"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/item_circular_color_accent_background"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/calendar"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5"
                android:textSize="@dimen/ds22"
                android:textStyle="bold"
                android:text="@string/history"
                android:textColor="@color/colorAccent"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>